# icepyx

./: .all-contributorsrc  .coveragerc  .flake8  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  ATTRIBUTION.rst  CITATION.cff  CITATION.rst  CONTRIBUTORS.rst  HARMONY_MIGRATION_NOTES.md  ICESat-2_DAAC_DataAccess_working.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  argo_BGC_class_sandbox  argo_workflow.ipynb  binder-gallery.yaml  code_of_conduct.md  colocated_data_sandbox  contribution_guidelines.rst  getOC2.py  get_BGC_argo.py  get_argo.py  icepyx_collect.py  notes.txt  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements-docs.txt  requirements.txt  sat_match.ipynb  setup.cfg  setup.py
.github/: dependabot.yml
.github/actions/install-icepyx/: action.yml
.github/workflows/: binder-badge.yml  binderbot.yaml  doc.yml  download_test.yml  draft-pdf.yml  flake8_action.yml  get_pypi_stats.yml  integration_test.yml  lint_yaml.yaml  linter_actions.yml  publish_to_pypi.yml  test.yml  traffic_action.yml  typecheck.yml  uml_action.yml  unit_test.yml
binder/: Dockerfile
dev-notebooks/: ICESat-2Hackweek_tutorial_locations_draft.ipynb  ICESat-2_DAAC_DataAccess_working.ipynb  ICEsat-2_DAAC_DataAccess2_Subsetting  ICEsat-2_DAAC_DataAccess2_Subsetting.ipynb  is2_demo_download_restart.ipynb  is2_demo_var_subset.ipynb  spatial_subsetting_vis.ipynb
doc/: CITATION.cff  HARMONY_MIGRATION_NOTES.md
doc/examples/: GettingStarted.ipynb  ICESat-2_ATL08Parse_and_Visualize.ipynb  ICESat-2_DAAC_DataAccess2_Subsetting.ipynb  ICESat-2_DAAC_DataAccess_Example.ipynb  ICESat-2_DEM_comparison_Colombia_working.ipynb  IntroICESat2.ipynb  QuickVisualizations (1).ipynb  QuickVisualizations.ipynb  examples.rst
doc/source/: API_ref.rst  HARMONY_MIGRATION_NOTES.md  attribution_link.rst  citation_link.rst  conf.py  credits_link.rst  example_link.rst  icepyx.core.rst  icepyx.rst  icepyx.tests.rst  index.rst  is2class.rst  modules.rst
doc/source/_static/: style.css
doc/source/_templates/: layout.html  pybtex_plugin.py
doc/source/community/: code_of_conduct.md  code_of_conduct.rst  contact.rst  resources.rst
doc/source/contributing/: attribution_guidelines.rst  attribution_link.rst  code_of_conduct_link.md  code_of_conduct_link.rst  contribution_guidelines.rst  contributors_link.rst  development_plan.rst  how_to_contribute.rst  icepyx_internals.rst  quest-available-datasets.rst  release_guide.rst
doc/source/dev-notebooks/: ICESat-2_DAAC_DataAccess_working.ipynb  is2_demo_download_restart.ipynb
doc/source/development/: contact.rst  contact_contribute.rst  contribution_guidelines.rst  development_plan.rst  github.rst  icepyx_architecture_user.wsd
doc/sphinxext/: announce.py  contributors.py  custom_pybtex.py
doc/usage/: install.rst
examples/: .order_restart  ATL07_DataAccess.ipynb  ATL07_tutorial.ipynb  ATL07_tutorial_RT.ipynb  GEDI-IS2_open_speed_test.ipynb  ICESat-2_DAAC_DataAccess2_Subsetting.ipynb  ICESat-2_DAAC_DataAccess_Example.ipynb  ICESat-2_DEM_comparison_Colombia_working.ipynb  ICESat-2_DataAccessIntro_ATL08.ipynb  ICESat-2_Data_Read-in_Example.ipynb  ICESat-2_Data_Visualization_Example.ipynb  Open_ATL08.ipynb  Open_ATL08_GEDI.ipynb  README.md  Working_with_ICESat-2_Data_Variables.ipynb  examples.rst  pythonBasics.ipynb  readers.py
icepyx/: __init__.py  _version.py  conftest.py  uat.py
icepyx/colocated_data/: colocateddata.py
icepyx/core/: APIformatNSIDC.py  APIformatting.py  Earthdata.py  EarthdataLogin.py  auth.py  base_query.py  cmr.py  convert.py  exceptions.py  files.py  geospatial.py  granules.py  harmony.py  icesat2data.py  is2cat.py  is2class.py  is2ref.py  orders.py  query.py  queryv2.py  read.py  spatial.py  temporal.py  types.py  urls.py  validate_inputs.py  validate_inputs_spatial.py  validate_inputs_temporal.py  variables.py  visualization.py
icepyx/dev-notebooks/: ICESat-2_DAAC_DataAccess_working.ipynb
icepyx/quest/: __init__.py  quest.py
icepyx/tests/: ATL06v04_options.json  ATL06v06_options.json  argovis_test_data.json  behind_NSIDC_API_login.py  conftest.py  is2class_query.py  is2class_test.py  test_APIformatting.py  test_Earthdata.py  test_OpenAltimetry.py  test_argo.py  test_auth.py  test_behind_NSIDC_API_login.py  test_geospatial.py  test_granules.py  test_is2class_NSIDC-API.py  test_is2class_inputs.py  test_is2class_methods.py  test_is2class_query.py  test_is2ref.py  test_query.py  test_quest.py  test_quest_BGCargo.py  test_quest_argo.py  test_read.py  test_spatial.py  test_temporal.py  test_validate_inputs.py  test_variables.py  test_visualization.py
icesat2py/: is2_data.py
polygons/Emmons/: glims_polygons.dbf
polygons/PineIsland/: glims_polygons.dbf
polygons/emmons/: glims_polygons.shp  glims_polygons.shx
traffic/: clones.csv  views.csv
vardata/: ATL07.json  ATL09.json  ATL10.json
(+154 files in other folders)
